traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:27: error: not found: value ordMax
  ecritMessage((ordMax*absMax)-1)
                ^TraversalByLine:27: error: not found: value absMax
  ecritMessage((ordMax*absMax)-1)
                       ^